--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "dev": "vite"
   },
   "dependencies": {
-    "throttle-debounce": "^3.0.1"
+    "throttle-debounce": "5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
+    "@types/throttle-debounce": "^5.0.0",
     "@vitejs/plugin-vue": "^1.10.1",
     "@vitejs/plugin-vue-jsx": "^1.3.0",
     "@vue/compiler-sfc": "3.0.0",
@@ -54,7 +55,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-uglify": "^6.0.4",
     "rollup-plugin-vue": "^6.0.0",
-    "vite": "^2.7.0-beta.11",
+    "vite": "2.9.12",
     "vue": "3.0.0"
   }
 }
