--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-strip": "^3.0.4",
     "@rollup/plugin-terser": "^0.4.4",
     "@vitejs/plugin-vue": "5.2.1",
     "@vue/compiler-sfc": "3.3.0",
@@ -50,5 +51,8 @@
     "rollup-plugin-vue": "^6.0.0",
     "vite": "5.1.8",
     "vue": "3.3.0"
+  },
+  "dependencies": {
+    "element-plus": "^2.9.3"
   }
 }
